[build-system]
requires = ["hatchling", "hatch-build-scripts", "pipx"]
build-backend = "hatchling.build"

[project]
name = "tc_model"
version = "0.1.0"
dependencies = [
    "keras==2.15.0",
    "tensorflow==2.15.0",
]
classifiers = [
  "Private :: Do Not Upload",
]
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "src/tc_model"
commands = [
    "pipx run gdown 1ZmBbE0Hk3K-lhwUpHJw3E0eg2jSg6592"
]
artifacts = [
    "input_data.hdf5",
]
