[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "tc_model"
version = "0.1.0"
dependencies = [
    "keras==2.15.0",
    "tensorflow==2.15.0",
]
classifiers = [
  "Private :: Do Not Upload",
]
readme = "README.md"

[project.optional-dependencies]
test = ["pytest"]
